--- a/gamble/gamble.ipynb
+++ b/gamble/gamble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
     "\n",
     "    if bad_data[col].sum() < bad_data.sum().mean():\n",
     "\n",
-    "        ddrop_cols.append(col)\n"
+    "        drop_cols.append(col)\n"
    ]
   },
   {
