--- a/DACON/HAI_2.0/1번.ipynb
+++ b/DACON/HAI_2.0/1번.ipynb
@@ -1187,7 +1187,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cdf3eef68f8401d8b85eb2e29e12225",
+       "model_id": "664284a71d00477c8751c1cd364c694a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1254,12 +1254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "N_HIDDENS = 64\n",
-    "N_LAYERS = 5\n",
+    "N_LAYERS = 3\n",
     "BATCH_SIZE = 2048\n",
     "\n",
     "class StackedGRU(torch.nn.Module):\n",
@@ -1279,28 +1279,28 @@
     "        x = x.transpose(0, 1)  # (batch, seq, params) -> (seq, batch, params)\n",
     "        self.rnn.flatten_parameters()\n",
     "        outs, _ = self.rnn(x)\n",
-    "        outs = self.relu(outs)\n",
+    "        outs = self.relu(outs)        \n",
     "        out = self.fc(outs[-1])\n",
-    "\n",
+    "        out = self.relu(out)\n",
     "        return x[0] + out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "StackedGRU(\n",
-       "  (rnn): GRU(58, 64, num_layers=5, bidirectional=True)\n",
+       "  (rnn): GRU(58, 64, num_layers=3, bidirectional=True)\n",
        "  (fc): Linear(in_features=128, out_features=58, bias=True)\n",
        "  (relu): ReLU()\n",
        ")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06b4fa21967d475d8ff7987875c3a40f",
+       "model_id": "f77c7ff8db7b4deab5d87df647d8179b",
        "version_major": 2,
        "version_minor": 0
       },
